--- a/composer.json
+++ b/composer.json
@@ -16,19 +16,19 @@
         }
     ],
     "require": {
-        "amazeeio/drupal_integrations": "0.3.3",
-        "composer/installers": "v1.9.0",
-        "cweagans/composer-patches": "1.7.0",
-        "drupal/core-project-message": "9.0.8",
-        "drupal/core-recommended": "9.0.8",
+        "amazeeio/drupal_integrations": "0.3.6",
+        "composer/installers": "2.0.1",
+        "cweagans/composer-patches": "1.7.1",
+        "drupal/core-project-message": "9.2.7",
+        "drupal/core-recommended": "9.2.7",
         "drupal/elasticsearch_connector": "7.0-alpha3",
         "drupal/lagoon_logs": "1.1.0",
-        "drupal/search_api": "1.18.0",
-        "drush/drush": "10.3.6",
+        "drupal/search_api": "1.20.0",
+        "drush/drush": "10.6.1",
         "zaporylie/composer-drupal-optimizations": "1.2.0"
     },
     "require-dev": {
-        "drupal/core-dev-pinned": "9.0.8"
+        "drupal/core-dev-pinned": "9.2.7"
     },
     "conflict": {
         "drupal/drupal": "*"
