--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,7 @@ services:
     image: uselagoon/elasticsearch-7:latest
     labels:
       lagoon.type: elasticsearch
+      lando.type: elasticsearch
     ports:
       - "9200" # exposes the port 9200 with a random local port, find it with `docker-compose port elasticsearch 9200`
     environment:
