--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,6 +121,10 @@ jobs:
       - setup_remote_docker:
           version: 20.10.6
       - run:
+          name: set vm.max_map_count for elasticsearch
+          command: |
+            sudo sysctl -w vm.max_map_count=262144
+      - run:
           name: use testlagoon repo instead of uselagoon
           command: |
             grep -rl uselagoon ./lagoon/*.dockerfile | xargs sed -i '/^FROM/ s/uselagoon/testlagoon/'
