update all tests for ES

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,10 @@ commands:
     steps:
       # build docker compose project and setup network
       - run:
+          name: set vm.max_map_count for elasticsearch
+          command: |
+            sudo sysctl -w vm.max_map_count=262144
+      - run:
           name: Update codebase to follow CI configuration
           command: |
             sed -i -e "/###/d" docker-compose.yml
@@ -100,6 +104,10 @@ jobs:
       - checkout
       - setup_remote_docker:
           version: 20.10.6
+      - run:
+          name: set vm.max_map_count for elasticsearch
+          command: |
+            sudo sysctl -w vm.max_map_count=262144
       - run:
           name: Install Leia and dependencies
           command: yarn add leia-parser mocha chai command-line-test
