--- a/.lagoon.yml
+++ b/.lagoon.yml
@@ -23,8 +23,7 @@ tasks:
 
 
 main:
-  environments: {}
   routes:
-    autogenerate:
-      prefixes:
-      - ireland
+    - nginx:
+      - foobar.foobarfoobarfoobarfoobarverylongnameverylongname.com:
+        tls-acme: true
