--- a/.lagoon.yml
+++ b/.lagoon.yml
@@ -26,7 +26,7 @@ environments:
   main:
     routes:
       - node:
-          - example.com:
+          - example-polina-test.com:
               alternativenames:
                 - www.example-polina-test.com
                 - en.example-polina-test.com
