--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.3'
 
 x-lagoon-project:
   # Lagoon project name (leave `&lagoon-project` when you edit this)
-  &lagoon-project ${COMPOSE_PROJECT_NAME:-drupal-example-simple}
+  &lagoon-project $PROJECT_NAME
 
 x-volumes:
   &default-volumes
