--- a/.lagoon.yml
+++ b/.lagoon.yml
@@ -3,30 +3,12 @@ docker-compose-yaml: docker-compose.yml
 project: drupal-example
 
 tasks:
-#   pre-rollout:
-#     - run:
-#         name: drush sql-dump
-#         command: mkdir -p /app/web/sites/default/files/private/ && drush sql-dump --ordered-dump --gzip --result-file=/app/web/sites/default/files/private/pre-deploy-dump.sql.gz || true
-#         service: cli
-
-  post-rollout:
-    - run:
-        name: IF no Drupal installed and we are not main branch, sync from main brancy
-        command: |
-          if tables=$(drush sqlq 'show tables;') && [ -z "$tables" ] && [[ "$LAGOON_GIT_BRANCH" != "main" ]]; then
-              # no drupal installed, sync DB from main branch
-              drush -y sql-sync @main @self
-          fi
-        service: cli
-
-
-
 
 environments:
   main:
     routes:
       - node:
-          - example-polina-test.com:
+          - foobar123.test6.com:
               alternativenames:
                 - www.test6.foobar.com
                 - api.test6.foobarfoobar.com
